:globe_with_meridians: Fix button on Safari

--- a/packages/fyndiq-component-button/styles.css
+++ b/packages/fyndiq-component-button/styles.css
@@ -7,6 +7,7 @@
   color: var(--color-black);
   font-family: inherit;
   text-decoration: none;
+  margin: 0;
 }
 
 .button:focus {
@@ -145,7 +146,7 @@
 
   /* Remove borders and fix border-radiuses */
   & .button + .button {
-    border-left: none;
+    border-left: 0;
   }
 
   & :first-child:not(:last-child) {
@@ -165,16 +166,16 @@
   /* No Outer Border */
   &.wrapperNoOuterBorder {
     & .button {
-      border-top: none;
-      border-bottom: none;
+      border-top: 0;
+      border-bottom: 0;
     }
 
     & :first-child {
-      border-left: none;
+      border-left: 0;
     }
 
     & :last-child {
-      border-right: none;
+      border-right: 0;
     }
   }
 }
@@ -184,7 +185,7 @@
 
   /* Remove borders and fix border-radiuses */
   & .button + .button {
-    border-top: none;
+    border-top: 0;
   }
 
   & :first-child:not(:last-child) {
@@ -204,16 +205,16 @@
   /* No Outer Border */
   &.wrapperNoOuterBorder {
     & .button {
-      border-right: none;
-      border-left: none;
+      border-right: 0;
+      border-left: 0;
     }
 
     & :first-child {
-      border-top: none;
+      border-top: 0;
     }
 
     & :last-child {
-      border-bottom: none;
+      border-bottom: 0;
     }
   }
 }
